# rust_oracle

./: .env.example  Cargo.toml  Readme.md  libclntsh.dylib
src/: main.rs
src/config/: app_config.rs  mod.rs  oracle_database.rs
src/models/: post.rs
src/repositories/: post_repository.rs
src/routes/: post_routes.rs
src/services/: post_service.rs
src/utils/: logging.rs
