[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
oracle = "=0.0.7"
dotenv = "0.15.0"
r2d2 = "0.8.10"
once_cell = "1.20.2"
r2d2-oracle = "=0.7.0"
env_logger = "0.11.5"
diesel_logger = "0.4.0"
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
anyhow = "1.0"
log = "0.4"

[features]
database_oracle = []